<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="tweetDefault">What\'s happening?</string>
    <string name="btnTweet">Tweet</string>
    <string name="defTweetLength">140</string>
    <string name="networkUnavailable">Network is unavailable. Cannot retrieve new tweets or post updates at this moment.</string>

    <string name="action_compose">Compose</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_compose_tweet">ComposeTweetActivity</string>
    <string name="reply">Reply to the tweet</string>
    <string name="replyTo">In reply to</string>
    <string name="tweetSent">Reply sent successfully</string>

    <string name="retweets">RETWEETS</string>
    <string name="favorites">FAVORITES</string>

    <string name="title_activity_tweet_detail">Tweet</string>

</resources>