<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.codepath.apps.SimpleTwitter.activities.TweetDetailActivity">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/viewMargin"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/ivProfileImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/cardView"
                android:layout_toRightOf="@+id/cardView"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvScreenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvUserName"
                android:layout_toEndOf="@+id/cardView"
                android:layout_toRightOf="@+id/cardView"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cardView"
                android:layout_marginBottom="@dimen/viewMargin"
                android:layout_marginTop="@dimen/minMargin"
                android:autoLink="all"
                android:text="Tweet Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/ivMediaURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBody"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/thumbnailHeight"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivMediaURL"
                android:layout_marginBottom="@dimen/minMargin"
                android:layout_marginTop="@dimen/minMargin"
                android:text="New Text" />

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvTimestamp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/separator1"
                android:padding="@dimen/viewMargin">

                <TextView
                    android:id="@+id/tvRetweetCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="10"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/minMargin"
                    android:layout_toEndOf="@+id/tvRetweetCount"
                    android:layout_toRightOf="@+id/tvRetweetCount"
                    android:text="@string/retweets"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvFavoritesCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:text="10"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/minMargin"
                    android:layout_toEndOf="@+id/tvFavoritesCount"
                    android:layout_toRightOf="@+id/tvFavoritesCount"
                    android:text="@string/favorites"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/iconContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivReply"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_weight="1"
                    android:src="@drawable/ic_reply_gray" />

                <ImageView
                    android:id="@+id/ivRetweet"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_weight="1"
                    android:src="@drawable/ic_retweet_gray" />

                <ImageView
                    android:id="@+id/ivLike"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_weight="1"
                    android:src="@drawable/ic_like_gray" />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_weight="1"
                    android:src="@drawable/ic_share_gray" />

            </LinearLayout>

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/iconContainer"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="vertical">

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvTimestamp"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/etReplyTweet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reply" />

        <RelativeLayout
            android:id="@+id/replyTweetContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Button
                android:id="@+id/btnTweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/minMargin"
                android:background="@color/colorTransparent"
                android:enabled="false"
                android:text="@string/btnTweet"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <View
                android:id="@+id/vseparator"
                android:layout_width="0.5dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/btnTweet"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/btnTweet"
                android:layout_alignTop="@+id/btnTweet"
                android:layout_centerVertical="true"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvTweetLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/minMargin"
                android:layout_toLeftOf="@+id/btnTweet"
                android:layout_toStartOf="@+id/btnTweet"
                android:text="@string/defTweetLength"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>

